OpenJMLTest/test/requiresElseB/expected
test/requiresElseB/Test.java:5: error: cannot find symbol
    //@ recommends x else NullPointerException;
                   ^
  symbol:   variable x
  location: class Test
test/requiresElseB/Test.java:14: error: Only one block of recommends clauses is permitted
    //@ recommends o != null else NullPointerException;
        ^
Operation not performed because of parse or type errors
2 errors
